--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
+    "stickybits": "^3.7.7",
     "tabletop": "^1.6.3",
     "uid": "^1.0.0"
   },
