--- a/package.json
+++ b/package.json
@@ -40,5 +40,5 @@
   "devDependencies": {
     "gh-pages": "^2.2.0"
   },
-  "homepage": "http://annaboodle.github.io/baller-express"
+  "homepage": "https://ballerexpress.com"
 }
