--- a/package.json
+++ b/package.json
@@ -41,5 +41,5 @@
   "devDependencies": {
     "gh-pages": "^2.2.0"
   },
-  "homepage": "https://annaboodle.github.io/baller-express/"
+  "homepage": "https://ballerexpress.com"
 }
